--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,12 @@ body {
     text-shadow: .1rem .1rem .5rem black;
     padding-bottom: 1.6rem;
 }
-
+.btn-lg {
+    border-width: medium;
+    border-radius: 0;
+    padding: .6rem 1.3rem;
+    font-size: 1.1rem;
+}
 
 
 
